Unable to create screen fragment declaratively (396)

--- a/samples/sample-legacy-ui/src/main/resources/application.properties
+++ b/samples/sample-legacy-ui/src/main/resources/application.properties
@@ -19,4 +19,4 @@ jmix.data.dbmsType = hsql
 
 eclipselink.ddl-generation = create-tables
 
-cuba.windowConfig = /com/haulmont/cuba/web-screens.xml sample-screens.xml
+jmix.ui.windowConfig = sample-screens.xml
